[package]
name = "ssandbox"
version = "0.1.0"
authors = ["szdytom <szdytom@163.com>"]
edition = "2018"
license = "MIT"
description = "This crate is used to create sandboxes on Linux."
homepage = "https://github.com/segment-oj/ssandbox-rs"
repository = "https://github.com/segment-oj/ssandbox-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.19.1"
rand = "0.8.0"
caps = "0.5.1"
libscmp = "0.1.0"
cgroups-rs = "0.2.3"
